# CppCLITool

./: .clangd  CMakeLists.txt  flake.nix
.cache/clangd/index/: Config.hpp.F2E97F441D3690D9.idx  main.cpp.8DF757C92115C3CC.idx
.cpp-tools/: config.yaml
include/: Commands.hpp  Config.hpp  File.hpp
src/: Commands.cpp  Config.cpp  File.cpp  main.cpp
